# pymboost

./: .gitignore  .gitlab-ci.yml  README.md  imghdr.py  pyproject.toml
.github/workflows/: github-pages.yml  pypi-publish.yml
benchmarks/: benchmark_python_case.py  benchmark_r_case.R  benchmark_r_vs_python.py  benchmark_warm_inprocess.py
benchmarks/results/: benchmark_r_vs_python.json  benchmark_r_vs_python.md  benchmark_warm_inprocess.json  benchmark_warm_inprocess.md
book/: _config.yml  _toc.yml  api-quick-reference.md  baselearners.md  book_utils.py  conclusion.md  cv-and-stopping.md  diagnostics.md  families.md  formula-reference.md  gamboost.md  getting-started.md  glmboost.md  inference.md  intro.md  known-deviations.md  mathematical-foundations.md  migration-from-r.md  myst.yml  parity-gallery.md  parity-wall.md  performance.md  practical-workflow.md  prediction-and-deployment.md  status-and-roadmap.md  varimp.md
book/baselearners/: bbs.md  blackboost.md  bmono.md  bols.md  brandom.md  btree.md
book/snippets/: bodyfat.md  setup.md
examples/: __init__.py  additive_models.py  blackboost_demo.py  bodyfat_examples.py  cars_cvrisk.py  cars_gamboost.py  chart_gallery.py  generate_tutorial_assets.py  getting_started.py  monotone_splines.py
learning/notebooks/: play_with_pymboost.ipynb
mboost/: __init__.py  data.py  extractors.py  inference.py  metrics.py  plotting.py
mboost/api/: __init__.py  (+3 more)
scripts/: refresh_book_assets.py  smoke_parity_gallery.py
tests/: test_aic.py  test_bbs.py  test_benchmark_script.py  test_btree.py  test_core.py  test_cv.py  test_dataframe_inputs.py  test_extractors.py  test_families.py  test_glmboost.py  test_plotting.py  test_warm_benchmark_script.py
(+89 files in other folders)
